--- a/index.html
+++ b/index.html
@@ -62,15 +62,11 @@
 
         <!-- Favicons
         ================================================== -->
-        <link rel="shortcut icon" href="https://php.tellthechef.com/favicon.ico" type="image/x-icon">
-        <link rel="apple-touch-icon" href="http://dev.tellthechef.com/_themes/_common/_images_gen/apple-touch-icon.png">
+        <link rel="shortcut icon" href="https://tellthechef.com/favicon.ico" type="image/x-icon">
+        <link rel="apple-touch-icon" href="http://tellthechef.com/_themes/_common/_images_gen/apple-touch-icon.png">
         <link rel="apple-touch-icon" sizes="72x72" href="/images/apple-touch-icon-72x72.png">
         <link rel="apple-touch-icon" sizes="114x114" href="/images/apple-touch-icon-114x114.png">
         <link rel="apple-touch-icon" sizes="144x144" href="/images/apple-touch-icon-144x144.png">
-
-        <link rel="dns-prefetch" href="https://api.tellthechef.com">
-        <link rel="dns-prefetch" href="https://app.tellthechef.com">
-        <link rel="dns-prefetch" href="https://php.tellthechef.com">
 
         <style>
         @media (max-width: 992px) {
@@ -105,7 +101,7 @@
                                     <!--<li><a href="#clients"><i class="icon-popup-1"></i>Our Work</a> </li>-->
                                     <li><a href="#team"><i class="icon-users"></i>Team</a> </li>
                                     <!--<li><a href="https://www.tellthechef.com/blog/"><i class="fa fa-book"></i>Blog</a> </li>-->
-                                    <li><a href="https://app.tellthechef.com/auth"><i class="icon-lock"></i>Login</a> </li>
+                                    <li><a href="mailto:andrew.norton@tellthechef.com"><i class="icon-lock"></i>Login</a> </li>
                                 </ul>
                             </div>
 
@@ -358,7 +354,7 @@
                                         <li><strong>Additonal Services</strong><br/>Extra users £2 Per Month<br/>Place Cards List Price</li>
                                     </ul>
                                     <p class="sign">
-                                        <a class="btn" href="https://app.tellthechef.com/auth">Sign up</a>
+                                        <a class="btn" href="mailto:andrew.norton@tellthechef.com">Sign up</a>
                                     </p>
                                 </div>
                             </div>
@@ -375,7 +371,7 @@
                                         <li><strong>Additonal Services</strong><br/>Extra Users £2 Per Month<br/>Place cards 10% discount</li>
                                     </ul>
                                     <p class="sign">
-                                        <a class="btn btn-large" href="https://app.tellthechef.com/auth">
+                                        <a class="btn btn-large" href="mailto:andrew.norton@tellthechef.com">
                                             Sign up
                                         </a>
                                         <br/><br/>
@@ -396,7 +392,7 @@
                                       <li><strong>Additonal Services</strong><br/>*Unlimited Users Inclusive<br/>Place Cards 25% Discount</li>
                                     </ul>
                                     <p class="sign">
-                                      <a class="btn btn-large" href="https://app.tellthechef.com/auth">
+                                      <a class="btn btn-large" href="mailto:andrew.norton@tellthechef.com">
                                           Sign up
                                       </a>
                                     </p>
@@ -628,7 +624,7 @@ And oh yeah, bowling.
                                 <div class="row">
                                     <div class="col-sm-6">
                                         <div class="footerWidget">
-                                            <p><a href="http://www.tellthechef.com" title="">TellTheChef</a> is perfect for your pre-order needs. Simple, reliable and fully automated software to work smart for your business.</p>
+                                            <p><a href="http://tellthechef.com" title="">TellTheChef</a> is perfect for your pre-order needs. Simple, reliable and fully automated software to work smart for your business.</p>
                                         </div>
                                     </div>
 
@@ -654,7 +650,7 @@ And oh yeah, bowling.
                             <div class="container">
                                 <div class="row">
                                     <div class="col-sm-6">
-                                        <p>Copyright © 2014 <a href="https://www.tellthechef.com">TellTheChef</a> / All rights reserved.<br/>TellTheChef Video made by <a href="http://www.bouncevideo.co.uk" target="_blank">Bounce Video</a></p>
+                                        <p>Copyright © 2014 <a href="https://tellthechef.com">TellTheChef</a> / All rights reserved.<br/>TellTheChef Video made by <a href="http://www.bouncevideo.co.uk" target="_blank">Bounce Video</a></p>
                                     </div>
                                     <div class="col-sm-6">
                                         <ul class="socialNetwork pull-right">
